--- a/papers.html
+++ b/papers.html
@@ -42,24 +42,21 @@ Released for free under a Creative Commons Attribution 3.0 License
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>About</span> </h2>
+          <h2><span>Related Papers</span> </h2>
           <p>
-		    Runtime enforcement is a powerful technique to ensure that a running system respects
-			some desired properties. Using an enforcement monitor, an (untrustworthy) input execution (in
-			the form of a sequence of events) is modified into an output sequence that complies to a property.
-			Runtime enforcement has been extensively studied over the last decade in the context of untimed
-			properties.
+		     The theory on runtime enforcement of timed properties is presented in this paper.
+			 <br>
+			 <br>
+			 <font size="3" color="black">Runtime Enforcement of Timed Properties (Runtime Verification 2012)</font>
+		     <br>			
+			  Abstract: Runtime enforcement is a powerful technique to ensure that a running system respects some desired properties. Using an enforcement monitor, an (untrustworthy) input execution (in the form of a sequence of events) is modified into an output sequence that complies to a property. Runtime enforcement has been extensively studied over the last decade in the context of untimed properties.
+			This paper introduces runtime enforcement of timed properties. We revisit the foundations of runtime enforcement when time between events matters. We show how runtime enforcers can be synthesized for any safety or co-safety timed property. Proposed runtime enforcers are time retardant: to produce an output sequence, additional delays are introduced between the events of the input sequence to correct it. Runtime enforcers have been prototyped and our simulation experiments validate their effectiveness.
+
 		  </p>
          <!-- <img src="images/img1.jpg" width="287" height="97" alt="image" /> -->
         
 		<p>
-		We are working on runtime enforcement of "timed properties" by revisiting the foundations of runtime enforcement when time between events matters.
-        We propose a new enforcement paradigm where enforcement mechanisms are "time retardants": to produce a correct output sequence, additional delays are introduced between the events of the input sequence.
-		
-		<p>
-		This website provides details and references to the papers containing the theoritical results,and more detalis about the prototype implementation of the proposed algorithms which were used for analysis and experiments.   
-		</p>
-		
+		The paper can be downloaded from <a href="http://hal.inria.fr/docs/00/74/32/70/PDF/RV2012.pdf" target="_blank">here</a>.
 		</p>
 		
 		</div>
@@ -96,49 +93,21 @@ Released for free under a Creative Commons Attribution 3.0 License
         <div class="gadget">
           <h2 class="star"><span>Team</span></h2>
           <ul class="ex_menu">
-             <li><a href="http://www.irisa.fr/prive/jeron/" title="Thierry Jéron "> <font size="2" color="black">Thierry Jéron</font>, INRIA, Rennes </a><br /></li>
+            <li><a href="http://www.irisa.fr/prive/jeron/" title="Thierry Jéron "> <font size="2" color="black">Thierry Jéron</font>, INRIA, Rennes </a><br /></li>
 			<li><a href="http://www.ylies.fr/" title="Yliès Falcone"> <font size="2" color="black">Yliès Falcone </font> LIG, Grenoble </a><br /></li>
 			<li><a href="http://people.rennes.inria.fr/Herve.Marchand/" title="Hervé Marchand "> <font size="2" color="black">Hervé Marchand </font> INRIA, Rennes</a><br /></li>
 			<li><a href="http://fr.linkedin.com/pub/srinivas-pinisetty/25/88a/a70" title="Srinivas Pinisetty">  <font size="2" color="black">Srinivas Pinisetty</font> INRIA, Rennes</a><br /></li>
-			<!--<li><a href="http://www.labri.fr/perso/rollet/" title="Antoine Rollet "> <font size="2" color="black">Antoine Rollet</font> , LABRI, Bordeaux</a><br /></li>
+			<!--
+			<li><a href="http://www.labri.fr/perso/rollet/" title="Antoine Rollet "> <font size="2" color="black">Antoine Rollet</font> , LABRI, Bordeaux</a><br /></li>
 			<li><a href="http://www.labri.fr/perso/nguena/" title="Omer L. NGUENA TIMO "> <font size="2" color="black">Omer L. Nguena Timo </font>, CRIM, Montréal</a><br /></li>
-			-->
-          </ul>
+          <--
+		  </ul>
         </div>
       </div>
       <div class="clr"></div>
     </div>
   </div>
-
-  <!--
-  <div class="fbg">
-    <div class="fbg_resize">
-      <div class="col c1">
-        <h2><span>About</span></h2>
-        <img src="images/white.jpg" width="56" height="56" alt="pix" />
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo.  llorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum. <a href="#">Learn more...</a></p>
-      </div>
-      <div class="col c2">
-        <h2><span>Lorem Ipsum</span></h2>
-        <ul class="sb_menu">
-          <li><a href="#">consequat molestie</a></li>
-          <li><a href="#">sem justo</a></li>
-          <li><a href="#">semper</a></li>
-          <li><a href="#">magna sed purus</a></li>
-          <li><a href="#">tincidunt</a></li>
-        </ul>
-      </div>
-      <div class="col c3">
-        <h2>Contact</h2>
-        <p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.</p>
-        <p><strong>Phone:</strong> +1234567<br />
-          <strong>Address:</strong> 123 TemplateAccess Rd<br />
-          <strong>E-mail:</strong> <a href="mailto:info@example.com">info@example.com</a></p>
-      </div>
-      <div class="clr"></div>
-    </div>
-  </div>
-  -->
+  
   <div class="footer">
     <div class="footer_resize">
       <p class="lf">&copy; 2013 INRIA, Rennes - Bretagne Atlantique, SUMO - Website designed with the help of website templates by <a href="http://www.bluewebtemplates.com">Website Templates</a></p>
@@ -151,7 +120,7 @@ Released for free under a Creative Commons Attribution 3.0 License
       </ul> -->
       <div class="clr"></div>
     </div>
-  </div> 
+	
 </div>
 </body>
 </html>
