--- a/prototype.html
+++ b/prototype.html
@@ -5,7 +5,7 @@ Released for free under a Creative Commons Attribution 3.0 License
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Template</title>
+<title>TiPEX</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 <!-- CuFon: Enables smooth pretty custom font rendering. 100% SEO friendly. To disable, remove this section -->
@@ -31,7 +31,8 @@ Released for free under a Creative Commons Attribution 3.0 License
 	  
 	  
 	  <div class="clr"></div>
-      <div class="logo"><h1><a href="index.html">Runtime Enforcement of Timed Properties<br /><small></small></a></h1></div>
+      <div class="logo"><h1><a href="index.html">TiPEX: a tool chain for Timed Property Enforcement
+during eXecution<br /><small></small></a></h1></div>
       <div class="clr"></div>
       <img src="images/image.jpg" width="930" height="160" alt="image" />
       <div class="clr"></div>
@@ -42,17 +43,43 @@ Released for free under a Creative Commons Attribution 3.0 License
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>Prototype</span> </h2>
+          <h2><span>TiPEX Tool Overview</span> </h2>
           <p>
-		    A prototype is implemented in python based on the algorithms presented in the paper.
-			The purpose of the prototype is to demonstrate feasibility, and have a first assesment of performance (and to what extent the overhead induced by monitoring is negligable).
+			TiPEX is a tool of 1200 LLOC in Python and consists of three
+			modules (shown in the figure below). The tool also uses the PyUPPAAL, DBMpyuppaal, and PyDBM libraries which are available 
+			for download 
+			at <a href="http://people.cs.aau.dk/~adavid/python/" target="_blank">http://people.cs.aau.dk/~adavid/python/</a>.
 			
-			The property (modeled as a TA), which should be provided as input to the tool is built using UPPAAL, and is stored in XML.
-			The tool also uses the PyUPPAAL and DBMpyuppaal libraries which are available for download at <a href="http://people.cs.aau.dk/~adavid/python/" target="_blank">http://people.cs.aau.dk/~adavid/python/</a>.
-	     </p>
+			<img src="fig/overview.jpg" width="400" height="350">
+			</p>
+			The Enforcement Monitor from Timed Automata (EMTA) module consists
+			in an implementation of the enforcement algorithms.
+			
+			<p>
+			The Enforcement Monitor Evaluation (EME) module is a test harness for the performance of enforcement monitors, 
+			with functionalities such as a trace generator.
+			</p>
+			
+			<p>
+			The Timed Automata Generator (TAG) module provides functionalities 
+			such as generating and composing TAs (which can be also used in other contexts than enforcement monitoring).
+			</p>
+			
+			
+<!--
+			A prototype is implemented in python based on the algorithms presented in the paper.
+			The purpose of the prototype is to demonstrate feasibility, and have a first assesment 
+			of performance (and to what extent the overhead induced by monitoring is negligable).
+			
+			The property (modeled as a TA), which should be provided as input to the tool is built using UPPAAL, 
+			and is stored in XML.
+			The tool also uses the PyUPPAAL and DBMpyuppaal libraries which are available for download 
+			at <a href="http://people.cs.aau.dk/~adavid/python/" target="_blank">http://people.cs.aau.dk/~adavid/python/</a>.
+-->	    
+		</p>
 			
 		 <p>
-		 The source code and some example properties can be downloaded <a href="download.html">here</a>.
+		 The source code and some examples can be downloaded <a href="download.html">here</a>.
 		 </p>		
 
 		  <!-- <img src="images/img1.jpg" width="287" height="97" alt="image" /> -->
@@ -83,7 +110,7 @@ Released for free under a Creative Commons Attribution 3.0 License
           <ul class="sb_menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="papers.html">Related Papers</a></li>
-            <li><a href="prototype.html">Prototype</a></li>
+            <li><a href="prototype.html">TiPEX Overview</a></li>
 			<li><a href="download.html">Download</a></li>
 			<li><a href="howto.html">Documentation</a></li>
           </ul>
@@ -96,10 +123,6 @@ Released for free under a Creative Commons Attribution 3.0 License
 			<li><a href="http://www.ylies.fr/" title="Yliès Falcone"> <font size="2" color="black">Yliès Falcone </font> LIG, Grenoble </a><br /></li>
 			<li><a href="http://people.rennes.inria.fr/Herve.Marchand/" title="Hervé Marchand "> <font size="2" color="black">Hervé Marchand </font> INRIA, Rennes</a><br /></li>
 			<li><a href="http://fr.linkedin.com/pub/srinivas-pinisetty/25/88a/a70" title="Srinivas Pinisetty">  <font size="2" color="black">Srinivas Pinisetty</font> INRIA, Rennes</a><br /></li>
-			<!--
-			<li><a href="http://www.labri.fr/perso/rollet/" title="Antoine Rollet "> <font size="2" color="black">Antoine Rollet</font> , LABRI, Bordeaux</a><br /></li>
-			<li><a href="http://www.labri.fr/perso/nguena/" title="Omer L. NGUENA TIMO "> <font size="2" color="black">Omer L. Nguena Timo </font>, CRIM, Montréal</a><br /></li>
-          -->
 		  </ul>
         </div>
       </div>
@@ -138,7 +161,7 @@ Released for free under a Creative Commons Attribution 3.0 License
   -->
  <div class="footer">
     <div class="footer_resize">
-      <p class="lf">&copy; 2013 INRIA, Rennes - Bretagne Atlantique, SUMO - Website designed with the help of website templates by <a href="http://www.bluewebtemplates.com">Website Templates</a></p>
+      <p class="lf">&copy; Website designed with the help of website templates by <a href="http://www.bluewebtemplates.com">Website Templates</a></p>
      <!-- <ul class="fmenu">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="support.html">Support</a></li>
