--- a/howto.html
+++ b/howto.html
@@ -31,7 +31,8 @@ Released for free under a Creative Commons Attribution 3.0 License
 	  
 	  
 	  <div class="clr"></div>
-      <div class="logo"><h1><a href="index.html">Runtime Enforcement of Timed Properties<br /><small></small></a></h1></div>
+      <div class="logo"><h1><a href="index.html">TiPEX: a tool chain for Timed Property Enforcement
+during eXecution<br /><small></small></a></h1></div>
       <div class="clr"></div>
       <img src="images/image.jpg" width="930" height="160" alt="image" />
       <div class="clr"></div>
@@ -107,7 +108,7 @@ Released for free under a Creative Commons Attribution 3.0 License
           <ul class="sb_menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="papers.html">Related Papers</a></li>
-            <li><a href="prototype.html">Prototype</a></li>
+            <li><a href="prototype.html">TiPEX Overview</a></li>
 			<li><a href="download.html">Download</a></li>
 			<li><a href="howto.html">Documentation</a></li>
           </ul>
@@ -162,7 +163,7 @@ Released for free under a Creative Commons Attribution 3.0 License
   -->
  <div class="footer">
     <div class="footer_resize">
-      <p class="lf">&copy; 2013 INRIA, Rennes - Bretagne Atlantique, SUMO - Website designed with the help of website templates by <a href="http://www.bluewebtemplates.com">Website Templates</a></p>
+      <p class="lf">&copy; Website designed with the help of website templates by <a href="http://www.bluewebtemplates.com">Website Templates</a></p>
      <!-- <ul class="fmenu">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="support.html">Support</a></li>
