some additions demo TAG

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Released for free under a Creative Commons Attribution 3.0 License
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>TiPEX</title>
+<title>TiPEX: About</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 <!-- CuFon: Enables smooth pretty custom font rendering. 100% SEO friendly. To disable, remove this section -->
@@ -57,8 +57,22 @@ during eXecution<br /><small></small></a></h1></div>
 		We are working on runtime enforcement of "timed properties" by revisiting the foundations of runtime enforcement when time between events matters.
         We propose a new enforcement paradigm where enforcement mechanisms are "time retardants": to produce a correct output sequence, additional delays are introduced between the events of the input sequence.
 		
+
+		
 		<p>
-		This website provides details and references to the papers containing the theoritical results,and more detalis about the prototype implementation of the proposed algorithms which were used for analysis and experiments.   
+		The TiPEX tool implements the enforcement monitoring algorithms
+		for timed properties we proposed (see related papers page). 
+		An enforcement monitor is generated from a timed automaton specifying a timed property. 
+		Its purpose	is to correct an input sequence according to this property. In addition,
+		TiPEX also provides modules to generate timed automata from
+		patterns, compose them, and check the class of properties they belong to in
+		order to optimize the monitors. 
+		</p>
+		
+		<p>
+		This website provides details, and references to the papers containing the theoretical results, 
+		and more details about the tool implementation, detailing its features, and instructions about how to use. 
+		We also provide the source code for download (together with examples).   
 		</p>
 		
 		</p>
@@ -88,9 +102,10 @@ during eXecution<br /><small></small></a></h1></div>
           <ul class="sb_menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="papers.html">Related Papers</a></li>
-            <li><a href="prototype.html">Prototype</a></li>
+            <li><a href="prototype.html">TiPEX Overview</a></li>
 			<li><a href="download.html">Download</a></li>
 			<li><a href="howto.html">Documentation</a></li>
+			<li><a href="demo.html">Demo</a></li>
           </ul>
         </div>
 		
