--- a/prototype.html
+++ b/prototype.html
@@ -113,6 +113,7 @@ during eXecution<br /><small></small></a></h1></div>
             <li><a href="prototype.html">TiPEX Overview</a></li>
 			<li><a href="download.html">Download</a></li>
 			<li><a href="howto.html">Documentation</a></li>
+			<li><a href="demo.html">Demo</a></li>
           </ul>
         </div>
 		
