--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@ during eXecution<br /><small></small></a></h1></div>
             <li><a href="papers.html">Related Papers</a></li>
             <li><a href="prototype.html">TiPEX Overview</a></li>
 			<li><a href="download.html">Download</a></li>
-			<li><a href="howto.html">Documentation</a></li>
-			<li><a href="demo.html">Demo</a></li>
+			<li><a href="demo.html">Documentation (TAG)</a></li>
+			<li><a href="howto.html">Documentation (EMTA+EME)</a></li>
+			
           </ul>
         </div>
 		
@@ -116,9 +117,7 @@ during eXecution<br /><small></small></a></h1></div>
 			<li><a href="http://www.ylies.fr/" title="Yliès Falcone"> <font size="2" color="black">Yliès Falcone </font> LIG, Grenoble </a><br /></li>
 			<li><a href="http://people.rennes.inria.fr/Herve.Marchand/" title="Hervé Marchand "> <font size="2" color="black">Hervé Marchand </font> INRIA, Rennes</a><br /></li>
 			<li><a href="http://fr.linkedin.com/pub/srinivas-pinisetty/25/88a/a70" title="Srinivas Pinisetty">  <font size="2" color="black">Srinivas Pinisetty</font> INRIA, Rennes</a><br /></li>
-			<!--<li><a href="http://www.labri.fr/perso/rollet/" title="Antoine Rollet "> <font size="2" color="black">Antoine Rollet</font> , LABRI, Bordeaux</a><br /></li>
-			<li><a href="http://www.labri.fr/perso/nguena/" title="Omer L. NGUENA TIMO "> <font size="2" color="black">Omer L. Nguena Timo </font>, CRIM, Montréal</a><br /></li>
-			-->
+			
           </ul>
         </div>
       </div>
