--- a/papers.html
+++ b/papers.html
@@ -99,12 +99,12 @@ during eXecution<br /><small></small></a></h1></div>
         <div class="gadget">
           <h2 class="star"><span>Menu</span></h2>
           <ul class="sb_menu">
-            <li><a href="index.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
             <li><a href="papers.html">Related Papers</a></li>
             <li><a href="prototype.html">TiPEX Overview</a></li>
 			<li><a href="download.html">Download</a></li>
-			<li><a href="howto.html">Documentation</a></li>
-			<li><a href="demo.html">Demo</a></li>
+			<li><a href="demo.html">Documentation (TAG)</a></li>
+			<li><a href="howto.html">Documentation (EMTA+EME)</a></li>
           </ul>
         </div>
 		
