--- a/prototype.html
+++ b/prototype.html
@@ -112,8 +112,8 @@ during eXecution<br /><small></small></a></h1></div>
             <li><a href="papers.html">Related Papers</a></li>
             <li><a href="prototype.html">TiPEX Overview</a></li>
 			<li><a href="download.html">Download</a></li>
-			<li><a href="howto.html">Documentation</a></li>
-			<li><a href="demo.html">Demo</a></li>
+			<li><a href="demo.html">Documentation (TAG)</a></li>
+			<li><a href="howto.html">Documentation (EMTA+EME)</a></li>
           </ul>
         </div>
 		
