--- a/demo.html
+++ b/demo.html
@@ -93,7 +93,7 @@ during eXecution<br /><small></small></a></h1></div>
 		  After entering this data in respective fields, and clicking "GenerateTA" button, a ".xml" file will be gnerated 
 		  with name "Example_Gen", containing the TA in UPPAAL format in the directory "\ToolBasicTAgenerator".
 		  The figure below shows the generated generated TA (.xml) file is opened/viewed in UPPAAL.
-		  <img src="fig/precedence2.jpg" width="300" height="200" align="middle">
+		  <img src="fig/precedence2.png" width="300" height="200" align="middle">
 		  <br>
 		  <b>NOTE:</b> Please check the README file in the directory "\ToolBasicTAgenerator" for more examples of usage, 
 		  and other details.
