comments from Ylies.

--- a/howto.html
+++ b/howto.html
@@ -45,8 +45,10 @@ during eXecution<br /><small></small></a></h1></div>
 		  
           <p>
 		    The EMTA+EME modules are implemented in Python.
-			To implement EMTA, we use the libraries UPPAAL DBM, PYUPPAAL, DBMPYUPPAAL and PYDBM available for download at <a href="http://people.cs.aau.dk/~adavid/python/" target="_blank">http://people.cs.aau.dk/~adavid/python/</a>.
-			Note that the EMTA+EME modules functionality is tested only on Linux (since we use some UPPAAL libraries that work on Linux platform).
+			To implement EMTA, we use the libraries UPPAAL DBM, PYUPPAAL, DBMPYUPPAAL and PYDBM 
+			available for download at <a href="http://people.cs.aau.dk/~adavid/python/" target="_blank">http://people.cs.aau.dk/~adavid/python/</a>.
+			Note that the EMTA+EME modules functionality is tested only on Linux 
+			(since we use some UPPAAL libraries that work on Linux platform).
 			Configuration of the system used is: Intel Core i7-2720QM (4 cores) at 2.20GHz CPU, with 4 GB RAM, and running on Ubuntu 12.04.	
 	     </p>
 		
