--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ during eXecution<br /><small></small></a></h1></div>
 
 		
 		<p>
-		The TiPEX tool implements the enforcement monitoring algorithms
-		for timed properties we proposed (see related papers page). 
+		The TiPEX tool implements enforcement monitoring algorithms
+		for timed properties (see related papers page). 
 		An enforcement monitor is generated from a timed automaton specifying a timed property. 
 		Its purpose	is to correct an input sequence according to this property. In addition,
 		TiPEX also provides modules to generate timed automata from
