--- a/demo.html
+++ b/demo.html
@@ -148,7 +148,7 @@ during eXecution<br /><small></small></a></h1></div>
 		  <b>NOTE:</b> Please check the README file in the directory "\Tool_TA_ClassIdentifier\" for additional details.
 		</p>
 	
-	
+	<img src="fig/precedence.jpg" width="280" height="170">
 	</div>
       
 	 <!-- <div class="article">
