--- a/demo.html
+++ b/demo.html
@@ -96,7 +96,7 @@ during eXecution<br /><small></small></a></h1></div>
 		  After entering this data in respective fields, and clicking "<b>GenerateTA</b>" button, a ".xml" file will be gnerated 
 		  with name "Example_Gen", containing the TA in UPPAAL format in the directory "\ToolBasicTAgenerator".
 		  The figure below shows the generated generated TA (.xml) file is opened/viewed in UPPAAL.
-		  <img src="fig/precedence.jpg" width="280" height="170">
+		  <img src="fig/Precedence-crop_1.jpg" width="280" height="170">
 		  <br>
 		  <b>NOTE:</b> Please check the README file in the directory "\ToolBasicTAgenerator" for more examples of usage, 
 		  and other details.
@@ -148,7 +148,7 @@ during eXecution<br /><small></small></a></h1></div>
 		  <b>NOTE:</b> Please check the README file in the directory "\Tool_TA_ClassIdentifier\" for additional details.
 		</p>
 	
-	<img src="fig/precedence.jpg" width="280" height="170">
+	
 	</div>
       
 	 <!-- <div class="article">
