--- a/howto.html
+++ b/howto.html
@@ -129,17 +129,26 @@ during eXecution<br /><small></small></a></h1></div>
 		  Now, we will see an example of how the main test method is invoked via Python command line, 
 		  to collect performance data for a property (see figure below). 
 		<br>
-		<img src="fig/SafetySnap.png" width="700" height="250">
+		<img src="fig/eval.png" width="700" height="250">
         <br>
+	
 	
 			<ul>
 			<li> - Import the MainTest module. </li>
-			<li> - Define the property. "Example_Safety.xml" is the property in this example, which is a UPPAAL model stored as "xml". (Some more properties are also available in the directory "ExampleProperties"). </li>
-			<li> - Define the possible actions (as shown in the image above, the possible actions in this example are 'a', 'b', 'c'). </li>
+			<li> - Specify the property by indicating its path. 
+			"Example_Safety.xml" is the property in this example, 
+			which is a UPPAAL model stored as "xml" (Some more properties are also available in the directory "ExampleProperties"). </li>
+			<li> - Specify which locations are accepting in the input timed automaton.
+              For instance, by typing accLoc=[`L0’, 'L1'], one specifies that the set of accepting locations in the input TA is {S1,S2}. </li>
+			
+			<li> - Specify the possible actions. For instance by typing 
+	              actions = [`a’, 'r'] one specifies that the set of actions is {a,r}.</li>
+
 			<li> - Define the range of possible delays. </li>
 			<li> - Invoke the "testStoreProcess" method in the MainTest module, providing the following arguments in order: </li>
 				<ol>
 				<li>&nbsp * Property</li>
+				<li>&nbsp * accepting locations</li>
 				<li>&nbsp * actions</li>
 				<li>&nbsp * delays</li>
 				<li>&nbsp * #traces</li>
