--- a/howto.html
+++ b/howto.html
@@ -139,10 +139,11 @@ during eXecution<br /><small></small></a></h1></div>
 			"Example_Safety.xml" is the property in this example, 
 			which is a UPPAAL model stored as "xml" (Some more properties are also available in the directory "ExampleProperties"). </li>
 			<li> - Specify which locations are accepting in the input timed automaton.
-              For instance, by typing accLoc=[`S1’, 'S2'], one specifies that the set of accepting locations in the input TA is {S1,S2}. </li>
+              For instance, by typing accLoc=[`S1’, 'S2'], 
+			  one specifies that the set of accepting locations in the input TA is {S1,S2}. </li>
 			
-			<li> - Specify the possible actions. For instance by typing 
-	              actions = [`a’, 'r'] one specifies that the set of actions is {a,r}.</li>
+			<li> - Specify the possible actions. 
+			       For instance by typing actions = [`a’, 'r'] one specifies that the set of actions is {a,r}.</li>
 
 			<li> - Define the range of possible delays. </li>
 			<li> - Invoke the "testStoreProcess" method in the MainTest module, providing the following arguments in order: </li>
